--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "hamsci_psws"
@@ -18,8 +18,12 @@ classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
 ]
+dynamic = ["dependencies"]
 
 [project.urls]
 "Homepage" = "https://github.com/HamSCI/hamsci_psws"
 "Bug Tracker" = "https://github.com/HamSCI/hamsci_psws/issues"
 "HamSCI Website" = "https://hamsci.org"
+
+[tool.setuptools.dynamic]
+dependencies = {file = "requirements.txt"}
