--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,21 @@ classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
 ]
-dynamic = ["dependencies"]
+dependencies = [
+    "beautifulsoup4",
+    "matplotlib",
+    "netCDF4",
+    "numpy",
+    "pandas",
+    "plotly",
+    "python_dateutil",
+    "pytz",
+    "requests",
+    "scipy",
+    "suntime",
+    "tqdm",
+    "xarray"
+]
 
 [project.urls]
 "Homepage" = "https://github.com/HamSCI/hamsci_psws"
@@ -27,6 +41,3 @@ dynamic = ["dependencies"]
 
 [tool.setuptools]
 packages = ["hamsci_psws"]
-
-[tool.setuptools.dynamic]
-dependencies = {file = "requirements.txt"}
