--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 ]
 description = "HamSCI Grape v1 Personal Space Weather Station Plotting Tools"
 readme = "README.md"
-license = { file="LICENSE" }
+license = {text = "GNU General Public License v3 (GPLv3)"}
 requires-python = ">=3.6"
 classifiers = [
     "Programming Language :: Python :: 3",
