--- a/mypy.ini
+++ b/mypy.ini
@@ -4,5 +4,6 @@ warn_unused_configs = True
 show_error_codes = True
 enable_error_code = ignore-without-code
 warn_unused_ignores = True
+warn_redundant_casts = True
 
 plugins = numpy.typing.mypy_plugin
