--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,8 @@
 [mypy]
 warn_unused_configs = True
 
+strict = True
+
 show_error_codes = True
 enable_error_code = ignore-without-code
 warn_unused_ignores = True
